--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -122,6 +122,25 @@
             </objects>
             <point key="canvasLocation" x="1228" y="1635"/>
         </scene>
+        <!--Alarm View Controller-->
+        <scene sceneID="tz4-Od-57r">
+            <objects>
+                <viewController storyboardIdentifier="Alarm" id="EhU-hB-EbK" customClass="AlarmViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3wt-Nu-KgT"/>
+                        <viewControllerLayoutGuide type="bottom" id="nc3-jr-dN4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="56e-Gh-6oR">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gAp-mQ-tEm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1228" y="2324"/>
+        </scene>
         <!--ごみの出し方-->
         <scene sceneID="d2g-xc-CEK">
             <objects>
