--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -141,6 +141,25 @@
             </objects>
             <point key="canvasLocation" x="1228" y="2324"/>
         </scene>
+        <!--Contact View Controller-->
+        <scene sceneID="3BG-6R-kEr">
+            <objects>
+                <viewController storyboardIdentifier="Contact" id="Ctb-GV-Uzk" customClass="ContactViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1N6-tM-hb1"/>
+                        <viewControllerLayoutGuide type="bottom" id="aZw-rf-Vbr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jIo-0M-QBm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="02X-BL-0we" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1227" y="3037"/>
+        </scene>
         <!--ごみの出し方-->
         <scene sceneID="d2g-xc-CEK">
             <objects>
