--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -160,6 +160,25 @@
             </objects>
             <point key="canvasLocation" x="1227" y="3037"/>
         </scene>
+        <!--Setting View Controller-->
+        <scene sceneID="QdV-8o-74X">
+            <objects>
+                <viewController storyboardIdentifier="Setting" id="pVY-57-a4J" customClass="SettingViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="D54-k8-cOX"/>
+                        <viewControllerLayoutGuide type="bottom" id="nXS-Xv-Wc4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rqE-Yh-suR">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vbD-Wu-M7Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1227" y="3735"/>
+        </scene>
         <!--ごみの出し方-->
         <scene sceneID="d2g-xc-CEK">
             <objects>
