--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -58,13 +58,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="H0I-p7-2gE">
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="pjg-yt-p8V">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <animations/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
-                                        <outlet property="delegate" destination="Ecc-V6-wdr" id="UdU-Ec-eoT"/>
+                                        <outlet property="delegate" destination="Ecc-V6-wdr" id="BBV-oZ-cxv"/>
                                     </connections>
                                 </searchBar>
                                 <prototypes>
@@ -95,8 +95,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="searchBar" destination="H0I-p7-2gE" id="zzn-76-6PV"/>
-                        <outlet property="searchDisplayController" destination="HpR-zV-72s" id="i5n-cA-am7"/>
+                        <outlet property="searchBar" destination="pjg-yt-p8V" id="lC1-XQ-BYu"/>
+                        <outlet property="searchDisplayController" destination="sT8-rs-WAU" id="SZG-tH-yXl"/>
                         <outlet property="searchTableView" destination="EAn-PY-EQu" id="jTB-WY-85M"/>
                     </connections>
                 </viewController>
@@ -107,6 +107,15 @@
                         <outlet property="searchContentsController" destination="Ecc-V6-wdr" id="xlX-0v-Dya"/>
                         <outlet property="searchResultsDataSource" destination="Ecc-V6-wdr" id="23U-9j-8Ym"/>
                         <outlet property="searchResultsDelegate" destination="Ecc-V6-wdr" id="Vo5-47-5WY"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="sT8-rs-WAU">
+                    <connections>
+                        <outlet property="delegate" destination="Ecc-V6-wdr" id="3s7-XR-7tW"/>
+                        <outlet property="searchBar" destination="pjg-yt-p8V" id="5Am-Nc-1n8"/>
+                        <outlet property="searchContentsController" destination="Ecc-V6-wdr" id="geB-Rr-kd0"/>
+                        <outlet property="searchResultsDataSource" destination="Ecc-V6-wdr" id="5VI-U6-5ql"/>
+                        <outlet property="searchResultsDelegate" destination="Ecc-V6-wdr" id="8fp-m9-3Mp"/>
                     </connections>
                 </searchDisplayController>
             </objects>
