--- a/iidaPro-2015/SearchTableViewCell.xib
+++ b/iidaPro-2015/SearchTableViewCell.xib
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Trash" rowHeight="66" id="KGk-i7-Jjw" customClass="SearchTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Trash" rowHeight="33" id="KGk-i7-Jjw" customClass="SearchTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="INJ-7m-aqf">
-                        <rect key="frame" x="8" y="11" width="44" height="44"/>
+                        <rect key="frame" x="8" y="10" width="34" height="34"/>
                         <animations/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="0YF-O7-4hy"/>
-                            <constraint firstAttribute="width" constant="44" id="cfQ-jl-sUj"/>
+                            <constraint firstAttribute="height" constant="34" id="0YF-O7-4hy"/>
+                            <constraint firstAttribute="width" constant="34" id="cfQ-jl-sUj"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8m-DL-drf">
-                        <rect key="frame" x="60" y="20" width="51" height="26"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8m-DL-drf">
+                        <rect key="frame" x="50" y="18" width="226" height="18"/>
                         <animations/>
-                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="29f-yt-CAd">
-                        <rect key="frame" x="280" y="17" width="32" height="32"/>
+                        <rect key="frame" x="286" y="14" width="26" height="26"/>
                         <animations/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="32" id="EFI-gO-9ah"/>
-                            <constraint firstAttribute="height" constant="32" id="KXJ-kL-zSk"/>
+                            <constraint firstAttribute="width" constant="26" id="EFI-gO-9ah"/>
+                            <constraint firstAttribute="height" constant="26" id="KXJ-kL-zSk"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <animations/>
                 <constraints>
                     <constraint firstAttribute="centerY" secondItem="INJ-7m-aqf" secondAttribute="centerY" id="8LR-wt-ntb"/>
+                    <constraint firstItem="29f-yt-CAd" firstAttribute="leading" secondItem="j8m-DL-drf" secondAttribute="trailing" constant="10" id="FRW-dO-AKg"/>
                     <constraint firstItem="j8m-DL-drf" firstAttribute="leading" secondItem="INJ-7m-aqf" secondAttribute="trailing" constant="8" id="GIS-5R-8kr"/>
                     <constraint firstAttribute="centerY" secondItem="29f-yt-CAd" secondAttribute="centerY" id="MI0-l1-TcB"/>
                     <constraint firstItem="29f-yt-CAd" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="SAb-Qu-opm"/>
@@ -54,7 +55,7 @@
                 <outlet property="trashImage" destination="INJ-7m-aqf" id="kta-v0-Gtc"/>
                 <outlet property="trashLabel" destination="j8m-DL-drf" id="PST-hh-9Ye"/>
             </connections>
-            <point key="canvasLocation" x="459" y="336"/>
+            <point key="canvasLocation" x="459" y="330.5"/>
         </tableViewCell>
     </objects>
 </document>
