change section color and cell text color

--- a/iidaPro-2015/SearchTableViewCell.xib
+++ b/iidaPro-2015/SearchTableViewCell.xib
@@ -26,7 +26,7 @@
                         <rect key="frame" x="50" y="18" width="226" height="18"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="29f-yt-CAd">
